# about-python

./: Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
about_python/: __init__.py
main_module/: Builtins.py  Classes.py  Language.py  Patterns.py  StandardLibrary.py
package/: __init__.py
package/moduleX/: fileX.py
package/moduleY/: __init__.py  fileY.py
tests/: test_1_language.py  test_2_classes.py  test_3_generics.py  test_4_dunders.py  test_5_types.py  test_6_builtin_functions.py  test_7_standard_library.py
tests/my_package/: __init__.py
tests/my_package/my_module/: my_file.py
