[tool.poetry]
name = "about-python"
version = "0.1.0"
description = "A project about the Python programming language."
license = "Apache-2.0"
authors = ["Nicola Lancellotti <nlancellotti@me.com>"]
readme = "README.md"
packages = [{include = "about_python"}]

[tool.poetry.scripts]
about_python = 'about_python:main'

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
